<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>io.casehub</groupId>
  <artifactId>casehub-work-parent</artifactId>
  <version>0.2-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>CaseHub Work - Parent</name>
  <description>Human-scale WorkItem lifecycle management — expiry, delegation, escalation, audit trail.
CaseHub platform module — human-scale WorkItem lifecycle management with optional integrations for Quarkus-Flow, CaseHub, and Qhorus.</description>
  <url>https://github.com/casehubio/work</url>

  <modules>
    <module>api</module>
    <module>core</module>
    <module>runtime</module>
    <module>deployment</module>
    <module>testing</module>
    <module>flow</module>
    <module>ledger</module>
    <module>notifications</module>
    <module>queues</module>
    <module>queues-examples</module>
    <module>queues-dashboard</module>
    <module>examples</module>
    <module>flow-examples</module>
    <module>persistence-mongodb</module>
    <module>issue-tracker</module>
    <module>ai</module>
    <module>reports</module>
    <module>postgres-broadcaster</module>
    <module>queues-postgres-broadcaster</module>

    <module>integration-tests</module>
  </modules>

  <scm>
    <connection>scm:git:git@github.com:casehubio/work.git</connection>
    <developerConnection>scm:git:git@github.com:casehubio/work.git</developerConnection>
    <url>https://github.com/casehubio/work</url>
    <tag>HEAD</tag>
  </scm>

  <properties>
    <quarkus.version>3.32.2</quarkus.version>
    <io.serverlessworkflow.version>7.13.8.Final</io.serverlessworkflow.version>
    <compiler-plugin.version>3.13.0</compiler-plugin.version>
    <networknt-json-schema.version>1.5.4</networknt-json-schema.version>
    <maven.compiler.release>21</maven.compiler.release>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <surefire-plugin.version>3.2.5</surefire-plugin.version>
  </properties>

  <repositories>
    <repository>
      <id>github</id>
      <name>casehubio GitHub Packages</name>
      <url>https://maven.pkg.github.com/casehubio/*</url>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>
  </repositories>

  <distributionManagement>
    <repository>
      <id>github</id>
      <name>casehubio GitHub Packages</name>
      <url>https://maven.pkg.github.com/casehubio/work</url>
    </repository>
    <snapshotRepository>
      <id>github</id>
      <name>casehubio GitHub Packages</name>
      <url>https://maven.pkg.github.com/casehubio/work</url>
    </snapshotRepository>
  </distributionManagement>

  <dependencyManagement>
    <dependencies>
      <!-- casehub-parent BOM — manages all casehubio artifact versions -->
      <dependency>
        <groupId>io.casehub</groupId>
        <artifactId>casehub-parent</artifactId>
        <version>0.2-SNAPSHOT</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>io.quarkus.platform</groupId>
        <artifactId>quarkus-bom</artifactId>
        <version>${quarkus.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>io.serverlessworkflow</groupId>
        <artifactId>serverlessworkflow-bom</artifactId>
        <version>${io.serverlessworkflow.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>io.quarkiverse.langchain4j</groupId>
        <artifactId>quarkus-langchain4j-core</artifactId>
        <version>1.8.4</version>
      </dependency>
      <dependency>
        <groupId>dev.langchain4j</groupId>
        <artifactId>langchain4j-core</artifactId>
        <version>1.13.0</version>
      </dependency>
      <dependency>
        <groupId>org.assertj</groupId>
        <artifactId>assertj-core</artifactId>
        <version>3.26.3</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>com.networknt</groupId>
        <artifactId>json-schema-validator</artifactId>
        <version>${networknt-json-schema.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-jexl3</artifactId>
        <version>3.4.0</version>
      </dependency>
      <!-- Not yet in casehub-parent BOM (platform#23 landed after last BOM release) -->
      <dependency>
        <groupId>io.casehub</groupId>
        <artifactId>casehub-platform-api</artifactId>
        <version>0.2-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>io.casehub</groupId>
        <artifactId>casehub-platform-expression</artifactId>
        <version>0.2-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>io.casehub</groupId>
        <artifactId>casehub-platform</artifactId>
        <version>0.2-SNAPSHOT</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${surefire-plugin.version}</version>
          <configuration>
            <systemPropertyVariables>
              <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
            </systemPropertyVariables>
          </configuration>
        </plugin>
        <plugin>
          <groupId>io.smallrye</groupId>
          <artifactId>jandex-maven-plugin</artifactId>
          <version>3.1.2</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <profiles>
    <profile>
      <id>native</id>
      <activation>
        <property>
          <name>native</name>
        </property>
      </activation>
      <properties>
        <skipITs>false</skipITs>
        <quarkus.native.enabled>true</quarkus.native.enabled>
      </properties>
    </profile>
  </profiles>

</project>
